unpackaged/main/default/objects/ADAM_Questionnaire__c/ADAM_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>ADAM Questionnaire</label>
    <nameField>
        <displayFormat>AQ-{000000}</displayFormat>
        <label>ADAM Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADAM Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>