unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/ADAM_Result__c.field-meta.xml
<CustomField>
    <fullName>ADAM_Result__c</fullName>
    <description>Positive or Negative ADAM Result - Ticked means positive result</description>
    <formula>IF( ADAM_Score__c  &gt;= 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Positive or Negative ADAM Result - Ticked means positive result</inlineHelpText>
    <label>ADAM Result</label>
    <type>Checkbox</type>
</CustomField>