unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <description>Age Range of Patient</description>
    <inlineHelpText>Age Range of Patient</inlineHelpText>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-34</fullName>
            </value>
            <value>
                <fullName>35-44</fullName>
            </value>
            <value>
                <fullName>45-59</fullName>
            </value>
            <value>
                <fullName>60-69</fullName>
            </value>
            <value>
                <fullName>70+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>