unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ADAM Questionnaires</relationshipLabel>
    <relationshipName>ADAM_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>