unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q10_Lost_Height__c.field-meta.xml
<CustomField>
    <fullName>Q10_Lost_Height__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you lost height?</description>
    <inlineHelpText>Have you lost height?</inlineHelpText>
    <label>Q10 Lost Height</label>
    <type>Checkbox</type>
</CustomField>