unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q1_Energy__c.field-meta.xml
<CustomField>
    <fullName>Q1_Energy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a lack of energy?</description>
    <inlineHelpText>Do you have a lack of energy?</inlineHelpText>
    <label>Q1 Energy</label>
    <type>Checkbox</type>
</CustomField>