unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q2_Grumpy__c.field-meta.xml
<CustomField>
    <fullName>Q2_Grumpy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you sad and/or grumpy?</description>
    <inlineHelpText>Are you sad and/or grumpy?</inlineHelpText>
    <label>Q2 Grumpy</label>
    <type>Checkbox</type>
</CustomField>