unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q3_Libido__c.field-meta.xml
<CustomField>
    <fullName>Q3_Libido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a decrease in libido (sex drive)?</description>
    <inlineHelpText>Do you have a decrease in libido (sex drive)?</inlineHelpText>
    <label>Q3 Libido</label>
    <type>Checkbox</type>
</CustomField>