unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q4_Life_Enjoyment__c.field-meta.xml
<CustomField>
    <fullName>Q4_Life_Enjoyment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you noticed a decreased enjoyment of life?</description>
    <inlineHelpText>Have you noticed a decreased enjoyment of life?</inlineHelpText>
    <label>Q4 Life Enjoyment</label>
    <type>Checkbox</type>
</CustomField>