unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q5_Strength__c.field-meta.xml
<CustomField>
    <fullName>Q5_Strength__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a decrease in strength and/or endurance?</description>
    <inlineHelpText>Do you have a decrease in strength and/or endurance?</inlineHelpText>
    <label>Q5 Strength</label>
    <type>Checkbox</type>
</CustomField>