unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q6_Sleepy__c.field-meta.xml
<CustomField>
    <fullName>Q6_Sleepy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you falling asleep after dinner?</description>
    <inlineHelpText>Are you falling asleep after dinner?</inlineHelpText>
    <label>Q6 Sleepy</label>
    <type>Checkbox</type>
</CustomField>