unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q7_Sports__c.field-meta.xml
<CustomField>
    <fullName>Q7_Sports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you noticed a decrease in your ability to play sports?</description>
    <inlineHelpText>Have you noticed a decrease in your ability to play sports?</inlineHelpText>
    <label>Q7 Sports</label>
    <type>Checkbox</type>
</CustomField>