unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q8_Work_Performance__c.field-meta.xml
<CustomField>
    <fullName>Q8_Work_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has there been a recent deterioration in your work performance?</description>
    <inlineHelpText>Has there been a recent deterioration in your work performance?</inlineHelpText>
    <label>Q8 Work Performance</label>
    <type>Checkbox</type>
</CustomField>