unpackaged/main/default/objects/ADAM_Questionnaire__c/fields/Q9_Erections__c.field-meta.xml
<CustomField>
    <fullName>Q9_Erections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are your erections less strong?</description>
    <inlineHelpText>Are your erections less strong?</inlineHelpText>
    <label>Q9 Erections</label>
    <type>Checkbox</type>
</CustomField>