unpackaged/main/default/objects/ADAM_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ADAM_Result__c</columns>
    <columns>Age_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>